# namespace_packages

src/my-calculator-add/: pyproject.toml
src/my-calculator-add/my_calculator/basic/: add.py
src/my-calculator-add/tests/: test_se.py
src/my-calculator-multiply/: pyproject.toml
src/my-calculator-multiply/my_calculator/basic/: multiply.py
src/my-calculator-operations/: pyproject.toml
src/my-calculator-operations/my_calculator/: operations.py
src/my-calculator-operations/tests/: test_my_calculator_operations.py
